<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loohcs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in_username">Username</string>
    <string name="log_in_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="register_link">Register Here!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_email">Email</string>
    <string name="user_details">User Details</string>
    <string name="username_text">Username:</string>
    <string name="email_txt">Email:</string>
    <string name="password_txt">Password:</string>
    <string name="log_out_button">Log out</string>
    <string name="title_activity_display_info">DisplayInfoActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_fragment_channels">Channels</string>
    <string name="title_fragment_videos">Videos</string>
    <string name="title_fragment_people">People</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="menu_camera_label">Camera</string>

    <string-array name="camera_choices">
        <item>Take Video</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tab_bar">TabBar</string>
    <string name="title_activity_tab1">Tab1</string>
    <string name="title_activity_tab2">Tab2</string>
    <string name="title_activity_tab3">Tab3</string>

</resources>
