<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smarps.loohcs.SignUpActivity" >

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpUsername"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/log_in_password"
        android:inputType="textPassword"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/signUpConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpPassword"
        android:layout_below="@+id/signUpPassword"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUpConfirmPassword"
        android:layout_below="@+id/signUpConfirmPassword"
        android:onClick="onRegisterClick"
        android:text="@string/sign_up_button"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpPassword"
        android:layout_alignLeft="@+id/signUpPassword"
        android:ems="10"
        android:hint="@string/sign_up_email"
        android:inputType="textEmailAddress"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpEmail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/log_in_username" >

        <requestFocus />
    </EditText>

</RelativeLayout>
